Use malayalam fonts for malayalam texts

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -16,3 +16,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+  font-family: 'Manjari';
+  src: url('Manjari-Regular.woff2') format('woff2'),
+       url('Manjari-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
