Add filters back

--- a/mainapp/templates/mainapp/request_list.html
+++ b/mainapp/templates/mainapp/request_list.html
@@ -79,9 +79,9 @@
       <tr>
         <th>Request Number - അപേക്ഷ നമ്പര്‍</th>
         <th>District - ജില്ല</th>
-        <th>Location - സ്ഥലം</th>
-        <th>Requestee - അപേക്ഷകന്‍റെ പേര</th>
-        <th>Phone - ഫോണ്‍ നമ്പര്‍</th>
+        <th>Location - സ്ഥലം <span><input class="search" id="search-loc" type="text" name="search-loc" /></span></th>
+        <th>Requestee - അപേക്ഷകന്‍റെ പേര് <span><input class="search" id="search-requestee" type="text" name="search-requestee" /></span></th>
+        <th>Phone - ഫോണ്‍ നമ്പര്‍ <span><input class="search" id="search-phone" type="text" name="search-phone" /></span></th>
         <th>Date - തീയതി</th>
         <th>More details - കൂടുതൽ വിശദാംശങ്ങൾ</th>
       </tr>
