--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,3 +311,66 @@ table thead tr th {
         opacity: 1;
     }
 }
+
+.table{
+  table-layout: fixed;
+}
+
+.table td{
+  word-wrap: break-word;
+}
+#req-summary { margin-top: 15px; }
+.modal-body .row { padding: 5px 0 }
+
+
+@media only screen and (max-width: 800px)  {
+
+	#requests-table table, thead, tbody, th, td, tr {
+		display: block;
+	}
+
+	#requests-table thead tr {
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+
+  #requests-table tr {
+    margin: 0 0 1rem 0;
+  }
+
+  #requests-table tr:nth-child(odd) {
+    background: #ccc;
+  }
+
+	#requests-table td {
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee;
+		position: relative;
+		padding-left: 50%;
+	}
+
+	#requests-table td:before {
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 0;
+		left: 6px;
+		width: 45%;
+		padding-right: 10px;
+		white-space: normal;
+	}
+  #requests-table td:nth-of-type(1):before { content: "Request Number - അപേക്ഷ നമ്പര്‍"; }
+  #requests-table td:nth-of-type(2):before { content: "District - ജില്ല"; }
+  #requests-table td:nth-of-type(3):before { content: "Location - സ്ഥലം"; }
+  #requests-table td:nth-of-type(4):before { content: "Requestee - അപേക്ഷകന്‍റെ പേര്"; }
+  #requests-table td:nth-of-type(5):before { content: "Phone - ഫോണ്‍ നമ്പര്‍"; }
+  #requests-table td:nth-of-type(6):before { content: "Date - തീയതി"; }
+  #requests-table td:nth-of-type(9):before { content: "More details - കൂടുതൽ വിശദാംശങ്ങൾ"; }
+}
+@media only screen and (max-width: 420px)  {
+	#requests-table td {
+    min-height: 60px;
+	}
+}
