--- a/templates/home.html
+++ b/templates/home.html
@@ -12,16 +12,14 @@
 <div class="container text-center">
     <h1 class="main-logo">Kerala<span style="font-weight: normal;">rescue</span></h1>
     <p style="margin-bottom:20px;">
-        <i>An initiative by Govt. of Kerala, Kerala State IT Mission and IEEE Kerala Section<br>
-        For effective collaboration and communications between authorities, volunteers and public </i><br/>
-        <strong><span class="notranslate">ദുരിതാശ്വാസ പ്രവർത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാൻ</span></strong><br/>
+        <i>An initiative by Govt. of Kerala, Kerala State IT Mission and IEEE Kerala Section.<br>
+        For effective collaboration and communications between authorities, volunteers and public.</i><br/>
+        <strong><span class="notranslate">ദുരിതാശ്വാസ പ്രവർത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാൻ.</span></strong><br/></p>
           <!-- <a class="btn btn-info btn-msg" href="{% static 'images/msg_cm.jpg' %}">Message from Hon. Chief Minister of Kerala</a> -->
           <a class="btn btn-info btn-msg" href="https://donation.cmdrf.kerala.gov.in/">Donate to Chief Minister's Fund Online</a>
-
-        </p>
     <p>
         <a class="btn btn-danger btn-msg" href="{%url 'Announcements' %}">{% bootstrap_icon "bullhorn" %} Announcements (<span class="ml notranslate">അറിയിപ്പുകൾ</span>)</a>
-        <a class="btn btn-info btn-msg" href="https://afterflood.in">After Flood Resources</a>
+        <a class="btn btn-info btn-msg" href="https://afterflood.in">After Flood (പ്രളയാനന്തരം)</a>
     </p>
   <a href="https://keralarescuemap.ushahidi.io/posts/create/17" class="home-button card" role="button">
     {% bootstrap_icon "bell" %}
@@ -50,6 +48,13 @@
                 <span class="ml small notranslate">വ്യക്തിയെ തിരയുക/<br/>കാണാതായ വ്യക്തികളെ <br/>റിപ്പോർട്ട് ചെയ്യുക</span>
         </span>
     </a> -->
+    <a href="https://keralarescuemap.ushahidi.io/views/map" class="home-button card" role="button">
+      {% bootstrap_icon "list" %}
+      <span class="text">
+        Registered Requests<br/>
+        <span class="ml small notranslate">ഇതു വരെ ആവശ്യപ്പെട്ടവ</span>
+      </span>
+    </a>
     <a href="{%url 'relief_camps' %}" class="home-button card" role="button">
         {% bootstrap_icon "home" %}
         <span class="text">
@@ -57,13 +62,13 @@
           <span class="ml small notranslate">ദുരിതാശ്വാസ ക്യാമ്പുകൾ</span>
         </span>
     </a>
-    <a href="{%url 'Announcements' %}" class="home-button card" role="button">
+  <!--  <a href="{%url 'Announcements' %}" class="home-button card" role="button">
             {% bootstrap_icon "bullhorn" %}
             <span class="text">
             Announcements<br/>
                 <span class="ml small notranslate">അറിയിപ്പുകൾ</span>
             </span>
-        </a>
+        </a> -->
     <a href="{%url 'social_media_announcements' %}" class="home-button card" role="button">
             {% bootstrap_icon "bullhorn" %}
             <span class="text">
@@ -89,7 +94,7 @@
         {% bootstrap_icon "globe" %}
         <span class="text">
             Flood Map<br/>
-           <!-- <span class="ml small notranslate">സഹായം ആവശ്യമായ സ്ഥലങ്ങളും<br/>ദുരിതാശ്വാസ ക്യാമ്പുകളും</span>-->
+           <span class="ml small notranslate">പ്രളയത്തിന്റെ ഭൂപടം</span>
         </span>
     </a>
     <a href="{% url 'contactus' %}" class="home-button card" role="button">
@@ -98,13 +103,6 @@
             Contact <br>INFO<br/>
             <span class="ml small notranslate">ഞങ്ങളുമായി ബന്ധപ്പെടാൻ</span>
         </span>
-    </a>
-    <a href="https://keralarescuemap.ushahidi.io/views/map" class="home-button card" role="button">
-      {% bootstrap_icon "list" %}
-      <span class="text">
-        Registered Requests<br/>
-        <span class="ml small notranslate">ഇതു വരെ ആവശ്യപ്പെട്ടവ</span>
-      </span>
     </a>
     <a href="{%url 'medicalview' %}" class="home-button card" role="button">
         {% bootstrap_icon "plus" %}
