--- a/mainapp/templates/mainapp/district_needs.html
+++ b/mainapp/templates/mainapp/district_needs.html
@@ -48,24 +48,29 @@ function copy_content_or_share(elem) {
 	for(var i = 0;i<tds.length-1;i++) {
 		copy_text = copy_text+ths[i].innerText.toUpperCase()+'\n\n'+tds[i].innerText+'\n\n';
 	}
-	var tempInput = document.createElement("textarea");
-    tempInput.style = "position: absolute; left: -1000px; top: -1000px";
-    tempInput.innerHTML = copy_text;
-    document.body.appendChild(tempInput);
-    tempInput.select();
-    document.execCommand("copy");
-    document.body.removeChild(tempInput);
+	
+	function copy_content() {
+		var tempInput = document.createElement("textarea");
+		tempInput.style = "position: absolute; left: -1000px; top: -1000px";
+		tempInput.innerHTML = copy_text;
+		document.body.appendChild(tempInput);
+		tempInput.select();
+		document.execCommand("copy");
+		document.body.removeChild(tempInput);
+		alert("Copied");
+	}
+	
 	if (navigator.share) {
 		navigator.share({
 			text: copy_text
 		})
 		.then(() => console.log('Successful share'))
 		.catch((error) => {
-			alert("Copied");
+			copy_content();
 			console.log('Error sharing', error);
 		});
 	} else {
-		alert("Copied");
+		copy_content();
 	}
 }
 </script>
