Updated Html Content in Home

--- a/templates/home.html
+++ b/templates/home.html
@@ -88,7 +88,7 @@
      <a href="https://map.keralarescue.in/" class="home-button card" role="button">
         {% bootstrap_icon "globe" %}
         <span class="text">
-            Flood Map<br/>
+            Weather Map<br/>
            <!-- <span class="ml small notranslate">സഹായം ആവശ്യമായ സ്ഥലങ്ങളും<br/>ദുരിതാശ്വാസ ക്യാമ്പുകളും</span>-->
         </span>
     </a>
