--- a/mainapp/templates/mainapp/volunteerview.html
+++ b/mainapp/templates/mainapp/volunteerview.html
@@ -51,7 +51,7 @@
 			white-space: normal;
 		}
 		#requests-table td:nth-of-type(1):before { content: "District - ജില്ല"; }
-    #requests-table td:nth-of-type(2):before { content: "Name - പേര"; }
+    #requests-table td:nth-of-type(2):before { content: "Name - പേര്"; }
     #requests-table td:nth-of-type(3):before { content: "Area - സന്നദ്ധസേവനം"; }
     #requests-table td:nth-of-type(4):before { content: "Location - സ്ഥലം"; }
     #requests-table td:nth-of-type(5):before { content: "Organization - സംഘടന"; }
@@ -87,7 +87,7 @@
     <thead>
       <tr>
         <th>District - ജില്ല</th>
-        <th>Name - പേര</th>
+        <th>Name - പേര്</th>
 	<th>Area - സന്നദ്ധസേവനം</th>
 		{% if user.is_authenticated %}
 			<th>Location - സ്ഥലം</th>
