Hide current consent state on consent confirmation page

--- a/mainapp/templates/mainapp/volunteer_form.html
+++ b/mainapp/templates/mainapp/volunteer_form.html
@@ -35,7 +35,7 @@
 	      <tr>
 	        <td><b> Organisation : </b></td><td>{{ form.instance.organisation }}</td>
 	      </tr>
-	      <tr>
+	      <tr style="display:None">
 	        <td><b> Consent : </b></td><td>{% if form.instance.has_consented %} yes {% else %} no {% endif %}</td>
 	      </tr>
 		  <tr>
