District full name in consent

--- a/mainapp/templates/mainapp/volunteer_form.html
+++ b/mainapp/templates/mainapp/volunteer_form.html
@@ -27,7 +27,7 @@
 
 	    <tbody>
 	      <tr>
-	        <td><b> District : </b></td><td>{{ form.instance.district }}</td>
+	        <td><b> District : </b></td><td>{{ form.instance.get_district_display }}</td>
 	      </tr>
 	      <tr>
 	        <td><b> Name : </b></td><td>{{ form.instance.name }}</td>
