Added new message for survey volunteers

--- a/mainapp/templates/mainapp/volunteer_form.html
+++ b/mainapp/templates/mainapp/volunteer_form.html
@@ -12,7 +12,9 @@
 </nav>
 
 <h1 class="text-center">Register as Volunteer</h1>
-<h2 class="text-center">വൊളന്‍റീയര്‍ ആകാന്‍</h2>
+<h1 class="text-center">വൊളന്‍റീയര്‍ ആകാന്‍</h1>
+<h5 align=center>Voluntees are needed to undertake a a flood damage assesment survey in the field, and must accompany officials with an app to record damages. If you are willing, please  press the confirm button. </h5>
+<h5 align=center> ഈ മേഖലയിൽ ഒരു വെള്ളപ്പൊക്ക നാശനഷ്ട വിലയിരുത്തൽ സർവേ നടത്താൻ സന്നദ്ധപ്രവർത്തകർ ആവശ്യമാണ്, മാത്രമല്ല നാശനഷ്ടങ്ങൾ രേഖപ്പെടുത്തുന്നതിന് ഒരു ആപ്ലിക്കേഷനുമായി ഉദ്യോഗസ്ഥരോടൊപ്പം ഉണ്ടായിരിക്കണം.  നിങ്ങൾ തയ്യാറാണെങ്കിൽ, സ്ഥിരീകരിക്കുക. confirm ബട്ടൺ അമർത്തുക. </h5>
   <form method="post" id="volunteer_consent_form">
   {% csrf_token %}
   {% if form.instance.pk %}
