Added Damage Assesment Survey

--- a/templates/home.html
+++ b/templates/home.html
@@ -118,6 +118,15 @@
             <span class="ml small notranslate">സ്വകാര്യ റിലീഫ് ആൻഡ് കളക്ഷൻ സെന്ററുകൾ</span>
         </span>
     </a>
+    <a href="https://survey.keralarescue.in" class="home-button card" role="button">
+        {% bootstrap_icon "list" %}
+        <span class="text">
+                Damage Assesment
+                 <br>Survey<br/>
+            <!--<span class="ml small notranslate">സ്വകാര്യ റിലീഫ് ആൻഡ് കളക്ഷൻ സെന്ററുകൾ</span>-->
+        </span>
+    </a>
+    
     <p class="home-info">
             For emergency support, call the District control room at <b>1077</b> or the State control room at <b>1070</b>.<br>
         Volunteers may contact District Project Managers for support related to volunteering and contributions<br>
