Use Manjari fonts for malayalam texts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 body{
     background: #ededed;
 }
+.mal {
+  font-family: 'Manjari';
+}
 .navbar{
     padding: 15px 30px;
     margin-bottom: 5px;
