--- a/templates/dmodist.html
+++ b/templates/dmodist.html
@@ -14,14 +14,14 @@
     <table id="req-table" class="table">
         <thead>
           <tr>
-            <th>District - ജില്ല</th>
+            <th class="mal">District - ജില്ല</th>
             <th>Total Camps</th>
             <th>Total People</th>
             <th>To‍tal Male</th>
             <th>To‍tal Female</th>
             <th>To‍tal Infants</th>
             <th>Med Needed</th>
-            
+
           </tr>
         </thead>
         <tbody>
@@ -34,7 +34,7 @@
               <td>{{ camp.total_female }}</td>
               <td>{{ camp.total_infant }}</td>
               <td>{{ camp.total_medical }}</td>
-              
+
             </tr>
         {% endfor %}
       </tbody>
