--- a/templates/dmoinfo.html
+++ b/templates/dmoinfo.html
@@ -14,14 +14,14 @@
     <table id="req-table" class="table">
         <thead>
           <tr>
-            <th>District - ജില്ല</th>
+            <th class="mal">District - ജില്ല</th>
             <th>Total request for help received</th>
             <th>Requests Completed</th>
             <th>Requests Ongoing</th>
             <th>Total Contributions</th>
             <th>Contributions Served</th>
             <th>Total Volunteers</th>
-            
+
           </tr>
         </thead>
         <tbody>
@@ -34,7 +34,7 @@
               <td>{{ d.con }}</td>
               <td>{{ d.cons }}</td>
               <td>{{ d.vol }}</td>
-              
+
             </tr>
         {% endfor %}
       </tbody>
