--- a/templates/home.html
+++ b/templates/home.html
@@ -14,31 +14,31 @@
     <p style="margin-bottom:20px;">
         <i>An initiative by Govt. of Kerala, Kerala State IT Mission and IEEE Kerala Section.<br>
         For effective collaboration and communications between authorities, volunteers and public.</i><br/>
-        <strong><span class="notranslate">ദുരിതാശ്വാസ പ്രവർത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാൻ.</span></strong><br/></p>
+        <strong><span class="notranslate mal">ദുരിതാശ്വാസ പ്രവർത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാൻ.</span></strong><br/></p>
           <!-- <a class="btn btn-info btn-msg" href="{% static 'images/msg_cm.jpg' %}">Message from Hon. Chief Minister of Kerala</a> -->
           <a class="btn btn-info btn-msg" href="https://donation.cmdrf.kerala.gov.in/">Donate to Chief Minister's Fund Online</a>
     <p>
-        <a class="btn btn-danger btn-msg" href="{%url 'Announcements' %}">{% bootstrap_icon "bullhorn" %} Announcements (<span class="ml notranslate">അറിയിപ്പുകൾ</span>)</a>
-        <a class="btn btn-info btn-msg" href="https://afterflood.in">After Flood (പ്രളയാനന്തരം)</a>
+        <a class="btn btn-danger btn-msg" href="{%url 'Announcements' %}">{% bootstrap_icon "bullhorn" %} Announcements (<span class="ml notranslate mal">അറിയിപ്പുകൾ</span>)</a>
+        <a class="btn btn-info btn-msg mal" href="https://afterflood.in">After Flood (പ്രളയാനന്തരം)</a>
     </p>
   <a href="https://keralarescuemap.ushahidi.io/posts/create/17" class="home-button card" role="button">
     {% bootstrap_icon "bell" %}
     <span class="text">
         Request<br/>for rescue<br/>
-        <span class="ml small notranslate">രക്ഷാപ്രവർത്തനം അഭ്യർത്ഥിക്കാൻ</span>
+        <span class="ml small notranslate mal">രക്ഷാപ്രവർത്തനം അഭ്യർത്ഥിക്കാൻ</span>
     </span>
 </a>  <a href="https://keralarescuemap.ushahidi.io/posts/create/18" class="home-button card" role="button">
     {% bootstrap_icon "grain" %}
     <span class="text">
         Request<br/>for resources<br/>
-        <span class="ml small notranslate">സഹായം അഭ്യർത്ഥിക്കാൻ</span>
+        <span class="ml small notranslate mal">സഹായം അഭ്യർത്ഥിക്കാൻ</span>
     </span>
 </a>
 <a href="{%url 'contribute' %}" class="home-button card" role="button">
     {% bootstrap_icon "apple" %}
     <span class="text">
         Contribute<br/>
-        <span class="ml small notranslate">സഹായങ്ങൾ</span>
+        <span class="ml small notranslate mal">സഹായങ്ങൾ</span>
     </span>
 </a>
     <!-- <a href="{%url 'report_find_person' %}" class="home-button card" role="button">
@@ -52,14 +52,14 @@
       {% bootstrap_icon "list" %}
       <span class="text">
         Registered Requests<br/>
-        <span class="ml small notranslate">ഇതു വരെ ആവശ്യപ്പെട്ടവ</span>
+        <span class="ml small notranslate mal">ഇതു വരെ ആവശ്യപ്പെട്ടവ</span>
       </span>
     </a>
     <a href="{%url 'relief_camps' %}" class="home-button card" role="button">
         {% bootstrap_icon "home" %}
         <span class="text">
           Relief Camps<br/>
-          <span class="ml small notranslate">ദുരിതാശ്വാസ ക്യാമ്പുകൾ</span>
+          <span class="ml small notranslate mal">ദുരിതാശ്വാസ ക്യാമ്പുകൾ</span>
         </span>
     </a>
   <!--  <a href="{%url 'Announcements' %}" class="home-button card" role="button">
@@ -73,21 +73,21 @@
             {% bootstrap_icon "bullhorn" %}
             <span class="text">
             Public information Feed<br/>
-                <span class="ml small notranslate">പൊതു വിവര ഫീഡ്</span>
+                <span class="ml small notranslate mal">പൊതു വിവര ഫീഡ്</span>
             </span>
         </a>
     <a href="{%url 'distneedsview' %}" class="home-button card" role="button">
         {% bootstrap_icon "map-marker" %}
         <span class="text">
             DISTRICT NEEDS &amp; COLLECTION CENTERS<br/>
-            <span class="ml small notranslate">ജില്ലകളിലെ ആവശ്യങ്ങൾ</span>
+            <span class="ml small notranslate mal">ജില്ലകളിലെ ആവശ്യങ്ങൾ</span>
         </span>
     </a>
     <a href="{%url 'ngovolunteerview' %}" class="home-button card" role="button">
         {% bootstrap_icon "user" %}
         <span class="text">
             Volunteer &amp; NGO/COMPANY <br/>
-            <span class="ml small notranslate">വൊളന്‍റീയര &amp;<br/> എൻജിഒ്/കമ്പനി‍ </span>
+            <span class="ml small notranslate mal">വൊളന്‍റീയര &amp;<br/> എൻജിഒ്/കമ്പനി‍ </span>
         </span>
     </a>
      <a href="https://map.keralarescue.in/" class="home-button card" role="button">
@@ -101,21 +101,21 @@
         {% bootstrap_icon "phone" %}
         <span class="text">
             Contact <br>INFO<br/>
-            <span class="ml small notranslate">ഞങ്ങളുമായി ബന്ധപ്പെടാൻ</span>
+            <span class="ml small notranslate mal">ഞങ്ങളുമായി ബന്ധപ്പെടാൻ</span>
         </span>
     </a>
     <a href="{%url 'medicalview' %}" class="home-button card" role="button">
         {% bootstrap_icon "plus" %}
         <span class="text">
         Medical Information<br/>
-            <span class="ml small notranslate">ചികിത്സാ സംബന്ധമായ വിവരങ്ങൾ</span>
+            <span class="ml small notranslate mal">ചികിത്സാ സംബന്ധമായ വിവരങ്ങൾ</span>
         </span>
     </a>
     <a href="{%url 'privatedetails' %}" class="home-button card" role="button">
         {% bootstrap_icon "briefcase" %}
         <span class="text">
                 Private Relief &<br> Collection Centers<br/>
-            <span class="ml small notranslate">സ്വകാര്യ റിലീഫ് ആൻഡ് കളക്ഷൻ സെന്ററുകൾ</span>
+            <span class="ml small notranslate mal">സ്വകാര്യ റിലീഫ് ആൻഡ് കളക്ഷൻ സെന്ററുകൾ</span>
         </span>
     </a>
     <a href="https://survey.keralarescue.in" class="home-button card" role="button">
@@ -126,12 +126,12 @@
             <!--<span class="ml small notranslate">സ്വകാര്യ റിലീഫ് ആൻഡ് കളക്ഷൻ സെന്ററുകൾ</span>-->
         </span>
     </a>
-    
+
     <p class="home-info">
             For emergency support, call the District control room at <b>1077</b> or the State control room at <b>1070</b>.<br>
         Volunteers may contact District Project Managers for support related to volunteering and contributions<br>
         <br/>
-        <span class="notranslate">സഹായത്തിനായി സന്നദ്ധ സേവകർ തയ്യാറാണ്. <br> സഹായം ആവശ്യമെങ്കിൽ വിളിക്കുക: ജില്ലാ കൺട്രോൾ റൂം: <b>1077</b> , സംസ്ഥാന കൺട്രോൾ റൂം: <b>1070</b> </span>
+        <span class="notranslate mal">സഹായത്തിനായി സന്നദ്ധ സേവകർ തയ്യാറാണ്. <br> സഹായം ആവശ്യമെങ്കിൽ വിളിക്കുക: ജില്ലാ കൺട്രോൾ റൂം: <b>1077</b> , സംസ്ഥാന കൺട്രോൾ റൂം: <b>1070</b> </span>
     </p>
      <br>
   <p class="slack">
