--- a/templates/medical_info.html
+++ b/templates/medical_info.html
@@ -18,7 +18,7 @@
     {% bootstrap_icon "plus" %}
     <span class="text">
         List<br/>hospitals<br/>
-        <span class="ml small notranslate">ആശുപത്രികൾ</span>
+        <span class="ml small notranslate mal">ആശുപത്രികൾ</span>
     </span>
     </a>
     <a href="{%url 'nhmdpm' %}" class="home-button card" role="button">
@@ -27,6 +27,6 @@
             District Program Managers<br/>(National Health Mission)
             <span class="ml small notransalate"></span>
         </span>
-    </a> 
+    </a>
 </div>
 {% endblock %}
