--- a/templates/nhm_dpm.html
+++ b/templates/nhm_dpm.html
@@ -59,11 +59,11 @@
 </nav>
 
 <h1 class="text-center">District Program Managers (NHM)</h1>
-{# <h2 class="text-center">ഇതു വരെ ആവശ്യപ്പെട്ടവ</h2> #}
+{# <h2 class="text-center mal">ഇതു വരെ ആവശ്യപ്പെട്ടവ</h2> #}
  <div id="dpm-table" class="table-responsive">
   <table class="table">
     <thead>
-      <tr>
+      <tr class="mal">
         <th>District - ജില്ല</th>
         <th>Name - പേര</th>
         <th>Phone - ഫോണ്‍ നമ്പര്‍</th>
