--- a/templates/dmotal.html
+++ b/templates/dmotal.html
@@ -11,42 +11,42 @@
   </p>
 
   <form method="get" action="/dmotal/"  class="simple-form">
-    <div class="form-group"><label class="control-label" for="id_district">Districts - ജില്ല</label><select name="district" class="form-control" title="" required id="id_district">
+    <div class="form-group"><label class="control-label mal" for="id_district">Districts - ജില്ല</label><select name="district" class="form-control mal" title="" required id="id_district">
     <option value="" selected>---------</option>
 
     <option value="all">All Districts</option>
 
     <option value="tvm">Thiruvananthapuram - തിരുവനന്തപുര</option>
-  
+
     <option value="ptm">Pathanamthitta - പത്തനംതിട</option>
-  
+
     <option value="alp">Alappuzha - ആലപ്പുഴ</option>
-  
+
     <option value="ktm">Kottayam - കോട്ടയം</option>
-  
+
     <option value="idk">Idukki - ഇടുക്കി</option>
-  
+
     <option value="mpm">Malappuram - മലപ്പുറം</option>
-  
+
     <option value="koz">Kozhikode - കോഴിക്കോട</option>
-  
+
     <option value="wnd">Wayanad - വയനാട്</option>
-  
+
     <option value="knr">Kannur - കണ്ണൂർ</option>
-  
+
     <option value="ksr">Kasaragod - കാസർഗോഡ്</option>
-  
+
     <option value="pkd">Palakkad - പാലക്കാട്</option>
-  
+
     <option value="tcr">Thrissur - തൃശ്ശൂർ</option>
-  
+
     <option value="ekm">Ernakulam - എറണാകുളം</option>
-  
+
     <option value="kol">Kollam - കൊല്ലം</option>
-  
 
 
-  </select> 
+
+  </select>
   <br>
   <input type="submit" class="btn btn-primary">
 
@@ -59,7 +59,7 @@
     <table id="req-table" class="table">
         <thead>
           <tr>
-            <th>District - ജില്ല</th>
+            <th class="mal">District - ജില്ല</th>
             <th>Taluk</th>
             <th>Total Camps</th>
             <th>Total People</th>
@@ -67,7 +67,7 @@
             <th>To‍tal Female</th>
             <th>To‍tal Infants</th>
             <th>Med Needed</th>
-            
+
           </tr>
         </thead>
         <tbody>
@@ -81,7 +81,7 @@
               <td>{{ camp.total_female }}</td>
               <td>{{ camp.total_infant }}</td>
               <td>{{ camp.total_medical }}</td>
-              
+
             </tr>
         {% endfor %}
       </tbody>
