--- a/templates/mapview.html
+++ b/templates/mapview.html
@@ -16,14 +16,14 @@
     <p style="margin-bottom:20px;">
         <i>An initiative by Govt. of Kerala, Kerala State IT Mission and IEEE Kerala Section<br>
         For effective collaboration and communications between authorities, volunteers and public </i><br/>
-        <strong>ദുരിതാശ്വാസ പ്രവര്‍ത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാന്‍</strong><br/>
+        <strong class="mal">ദുരിതാശ്വാസ പ്രവര്‍ത്തനങ്ങളും രക്ഷാ ദൗത്യങ്ങളും ഏകോപിപ്പിക്കാന്‍</strong><br/>
     <b><a href="{% static 'images/msg_cm.jpg' %}">Message from Hon. Chief Minister of Kerala</a></b>
   </p>
     <a href="http://bit.ly/KeralaCamps" class="home-button card" role="button">
         {% bootstrap_icon "globe" %}
         <span class="text">
           Relief Resources<br/>
-          <span class="ml small">ഗൂഗിൾ മാപ്പ് ദുരിതാശ്വാസ മാര്‍ഗങ്ങള്‍</span>
+          <span class="ml small mal">ഗൂഗിൾ മാപ്പ് ദുരിതാശ്വാസ മാര്‍ഗങ്ങള്‍</span>
         </span>
     </a>
   <!-- Disabled the link for the time being, until updated map is set-->
@@ -31,14 +31,16 @@
         {% bootstrap_icon "road" %}
         <span class="text">
           Flooded Streets<br/>
-          <span class="ml small">റോഡ് ‍</span>
+          <span class="ml small mal">റോഡ് ‍</span>
         </span>
     </a>
     <p class="home-info">
         Contact Control Room or Disaster Management Cell or District Administration for any support.<br>
         Volunteers may contact District Project Managers for support related to volunteering and contributions<br>
         <br/>
+        <span class="mal">
         സഹായത്തിനായി വൊളന്‍റീയര്‍മാര്‍ തയ്യാറാണ്. സഹായം ആവശ്യമെങ്കില്‍ ഒരോ ജില്ലയിലെയും നിയോഗിക്കപെട്ട ഉദ്യോഗസ്ഥരുമായി ബന്ധപ്പെടാം
+        </span>
     </p>
 </div>
 {% endblock %}
